added controller,repository and model classes
