# src/main/java/com/booleanuk/api/model/Publisher.java
@@ -1,0 +1,51 @@
+package com.booleanuk.api.model;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import jakarta.persistence.*;
+
+import java.util.Set;
+
+@Entity
+@Table(name="publishers")
+public class Publisher {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private int id;
+    private String name;
+    private String location;
+    @OneToMany(mappedBy = "publisher")
+    @JsonIgnoreProperties("publisher")
+    private Set<Book> books;
+
+    public Publisher() {
+    }
+
+    public Publisher(String name, String location) {
+        this.name = name;
+        this.location = location;
+    }
+
+    public int getId() {
+        return id;
+    }
+
+    public void setId(int id) {
+        this.id = id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getLocation() {
+        return location;
+    }
+
+    public void setLocation(String location) {
+        this.location = location;
+    }
+}
